<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rob.pocket_piano.MainActivity">

    <LinearLayout
        android:id="@+id/LinearLayout_PianoKeys"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@color/grey"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/Btn_C_Low"
            style="@style/WhitePianoKey"
            android:text="@string/C"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_Cs_Low"
            style="@style/BlackPianoKey"
            android:text="@string/Cs"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_D_Low"
            style="@style/WhitePianoKey"
            android:text="@string/D"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_Ds_Low"
            style="@style/BlackPianoKey"
            android:text="@string/Ds"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_E_Low"
            style="@style/WhitePianoKey"
            android:text="@string/E"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_F_Low"
            style="@style/WhitePianoKey"
            android:text="@string/F"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_Fs_Low"
            style="@style/BlackPianoKey"
            android:text="@string/Fs"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_G_Low"
            style="@style/WhitePianoKey"
            android:text="@string/G"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_Gs_Low"
            style="@style/BlackPianoKey"
            android:text="@string/Gs"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_A_Low"
            style="@style/WhitePianoKey"
            android:text="@string/A"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_As_Low"
            style="@style/BlackPianoKey"
            android:text="@string/As"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_B_Low"
            style="@style/WhitePianoKey"
            android:text="@string/B"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_C"
            style="@style/WhitePianoKey"
            android:text="@string/C"/>

        <Button
            android:id="@+id/Btn_Cs"
            style="@style/BlackPianoKey"
            android:text="@string/Cs"/>

        <Button
            android:id="@+id/Btn_D"
            style="@style/WhitePianoKey"
            android:text="@string/D"/>

        <Button
            android:id="@+id/Btn_Ds"
            style="@style/BlackPianoKey"
            android:text="@string/Ds"/>

        <Button
            android:id="@+id/Btn_E"
            style="@style/WhitePianoKey"
            android:text="@string/E"/>

        <Button
            android:id="@+id/Btn_F"
            style="@style/WhitePianoKey"
            android:text="@string/F"/>

        <Button
            android:id="@+id/Btn_Fs"
            style="@style/BlackPianoKey"
            android:text="@string/Fs"/>

        <Button
            android:id="@+id/Btn_G"
            style="@style/WhitePianoKey"
            android:text="@string/G"/>

        <Button
            android:id="@+id/Btn_Gs"
            style="@style/BlackPianoKey"
            android:text="@string/Gs"/>

        <Button
            android:id="@+id/Btn_A"
            style="@style/WhitePianoKey"
            android:text="@string/A"/>

        <Button
            android:id="@+id/Btn_As"
            style="@style/BlackPianoKey"
            android:text="@string/As"/>

        <Button
            android:id="@+id/Btn_B"
            style="@style/WhitePianoKey"
            android:text="@string/B"/>

        <Button
            android:id="@+id/Btn_C_High"
            style="@style/WhitePianoKey"
            android:text="@string/C"/>


        <Button
            android:id="@+id/Btn_Cs_High"
            style="@style/BlackPianoKey"
            android:text="@string/Cs"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_D_High"
            style="@style/WhitePianoKey"
            android:text="@string/D"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_Ds_High"
            style="@style/BlackPianoKey"
            android:text="@string/Ds"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_E_High"
            style="@style/WhitePianoKey"
            android:text="@string/E"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_F_High"
            style="@style/WhitePianoKey"
            android:text="@string/F"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_Fs_High"
            style="@style/BlackPianoKey"
            android:text="@string/Fs"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_G_High"
            style="@style/WhitePianoKey"
            android:text="@string/G"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_Gs_High"
            style="@style/BlackPianoKey"
            android:text="@string/Gs"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_A_High"
            style="@style/WhitePianoKey"
            android:text="@string/A"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_As_High"
            style="@style/BlackPianoKey"
            android:text="@string/As"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_B_High"
            style="@style/WhitePianoKey"
            android:text="@string/B"
            android:visibility="gone"/>

        <Button
            android:id="@+id/Btn_C_Top"
            style="@style/WhitePianoKey"
            android:text="@string/C"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_VoiceButtons"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout_PianoKeys"
        >

        <Button
            android:id="@+id/Btn_Piano"
            style="@style/VoiceButtonSelected"
            android:text="@string/Piano"/>

        <Button
            android:id="@+id/Btn_Bass"
            style="@style/VoiceButtonDeselected"
            android:text="@string/Bass"/>

        <Button
            android:id="@+id/Btn_Brass"
            style="@style/VoiceButtonDeselected"
            android:text="@string/Brass"/>

        <Button
            android:id="@+id/Btn_Banjo"
            style="@style/VoiceButtonDeselected"
            android:text="@string/Banjo"/>

        <Button
            android:id="@+id/Btn_Synth"
            style="@style/VoiceButtonDeselected"
            android:text="@string/Synth"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayout_BeatButtons"
        android:layout_width="166dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/LinearLayout_OctavePicker"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/Btn_Beat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/Start_Beat"
            />

        <Button
            android:id="@+id/Btn_BeatStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/Stop_Beat"
            android:visibility="gone"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_RecordPlaybackButtons"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/LinearLayout_Settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout_VoiceButtons">

        <ImageButton
            android:id="@+id/Btn_Record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Record"
            android:src="@drawable/rec"
            />

        <ImageButton
            android:id="@+id/Btn_Stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Stop"
            android:src="@drawable/stop"
            android:visibility="gone"
            />


        <ImageButton
            android:id="@+id/Btn_Play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Play"
            android:src="@drawable/play"
            />

        <TextView
            android:id="@+id/Lbl_State"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/Ready"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_Settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <CheckBox
            android:id="@+id/Chk_Loop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Loop_Playback"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="263dp"/>

        <CheckBox
            android:id="@+id/Chk_AutoTempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/Auto_Adjust_Tempo"
            app:layout_constraintLeft_toRightOf="@+id/LinearLayout_Settings"
            tools:layout_editor_absoluteY="287dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_OctavePicker"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toRightOf="@+id/LinearLayout_RecordPlaybackButtons"
        app:layout_constraintTop_toBottomOf="@id/LinearLayout_VoiceButtons"
        app:layout_constraintBottom_toBottomOf="@+id/LinearLayout_RecordPlaybackButtons"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/Lbl_Octave"
            android:layout_width="55dp"
            android:layout_height="47dp"
            android:text="@string/Select_Octave"
            android:layout_marginTop="15dp"
            />

        <Spinner
            android:id="@+id/Spn_SelectOctave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>